--- a/style.css
+++ b/style.css
@@ -1,9 +1,24 @@
 header {
     font-family: 'Lobster Two', cursive;
     font-family: 'Lobster', cursive;
+    width: 100%;
+    height: 100vh;
 }
 
 body {
+    background-image: url(Images/background.jpg);
+    background-size: cover;
+    background-position:center 33%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+section {
+    width: 100%;
+    height: 100vh;
+}
+
+.nav{
     font-family: 'Lobster', cursive;
     font-family: 'Lobster Two', cursive;
     font-family: 'Ribeye Marrow', cursive;
@@ -21,9 +36,13 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    
+    list-style-type: none;
 }
 
 li {
     margin: 20px;
+}
+
+#exp{
+    background-image: url(Images/cv.jpg);
 }
